start implementing api

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
   <div id="app"></div>
 
   <% if (TARGET === 'cordova') { %> <script src="cordova.js"></script> <% } %>
-  <script type="module" src="./js/jquery.js"></script>
-  <script type="module" src="./js/chart.js"></script>
+  <script src="./js/jquery.js"></script>
+  <script src="./js/chart.js"></script>
   <script type="module" src="./js/app.js"></script>
 
 </body>
