--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
   <div id="app"></div>
 
   <% if (TARGET === 'cordova') { %> <script src="cordova.js"></script> <% } %>
-  <script src="./js/jquery.js"></script>
-  <script src="./js/chart.js"></script>
-  <script type="module" src="./js/app.js"></script>
-
+  <script src="./lib/jquery.js"></script>
+  <script src="./lib/chart.js"></script>
+  <script type="module" src="./lib/app.js"></script>
+  
 </body>
 </html>
